[package]
name = "waragraph"
version = "0.0.1"
edition = "2021"
description = "Sparse matrix variation graphs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = { version = "0.10" }

raving = { path = "../vkengine" }

smallvec = "1.8.0"
nalgebra = "0.30"
sprs = "0.11"
sled = "0.34"
zerocopy = "0.6.1"

rgb = "0.8.25"
colorous = "1.0"
rayon = "1.5"
ndarray = { version = "0.15", features = ["rayon"] }

thunderdome = "0.5"
rustc-hash = "1.1"

internment = "0.5"

bstr = "0.2"

log = "0.4"

anyhow = "1.0"

crossbeam = "0.8"
parking_lot = "0.11.1"
# poll-promise = "0.1"

rhai = { version = "1.4", features = ["sync", "f32_float"] }
bytemuck = { version = "1.7", features = ["derive"] }

# temporary deps while i'm working on this as both the library & viewer

futures = { version = "0.3", features = ["thread-pool"] }
futures-timer = { version = "3.0.2" }

winit = "0.25"

ash = { version = "0.35", features = ["linked"] }
gpu-allocator = { version = "0.16", features = ["vulkan"] }
ash-window = "0.9.1"
rspirv-reflect = "0.6"

flexi_logger = { version = "0.18", features = ["async"] }