[package]
name = "waragraph"
version = "0.0.1"
edition = "2021"
description = "Sparse matrix variation graphs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = { version = "0.10" }

raving = { git = "https://github.com/chfi/raving" }
# raving = { path = "../vkengine" }

glyph_brush = "0.7"

smartstring = "^1"
smallvec = "1.8.0"
sprs = "0.11"
sled = "0.34"

bytemuck = { version = "1.7" }
zerocopy = "0.6.1"

coitrees = "0.2"
roaring = "0.9"
bimap = "0.6"
thunderdome = "0.5"
rustc-hash = "1.1"

euclid = "0.22"
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.30"
num-traits = "0.2"

crossbeam = "0.8"
parking_lot = "0.11.1"
rayon = "1.5"
# poll-promise = "0.1"

lazy_static = "1.4"

rand = "0.8.5"

palette = "0.6"
rgb = "0.8.25"
colorous = "1.0"

bstr = "0.2"

log = "0.4"

argh = "0.1"
ctrlc = "3.2"

anyhow = "1.0"

rhai = { version = "1.7", features = ["sync",
                                      "f32_float",
                                      "internals",
                                      "metadata"] }

# temporary deps while i'm working on this as both the library & viewer

# futures = { version = "0.3", features = ["thread-pool"] }
# futures-timer = { version = "3.0.2" }

winit = "0.25"
arboard = "2.1"

ash = { version = "0.36", features = ["linked"] }
gpu-allocator = { version = "0.17", features = ["vulkan"] }
ash-window = "0.9.1"
rspirv-reflect = "0.6"

flexi_logger = { version = "0.18", features = ["async"] }


[profile.dev]
opt-level = 3

# [profile.release]
# debug-assertions = true
