[package]
name = "waragraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waragraph-core = { path = "../lib" }

tokio = { version = "1", features = ["full"] }

winit = "0.27"
env_logger = "0.9"
log = "0.4"

egui = { version = "0.20", features = ["mint"] }
egui-wgpu = { version = "0.20" }
egui-winit = { version = "0.20" }

wgpu = { version = "0.14.0", features = ["spirv"] }
# naga = { version = "0.10", features = ["clone", "spv-in", "glsl-in", "spv-out"] }

taffy = "0.2"

mint = "0.5"
ultraviolet = { version = "0.9", features = ["bytemuck", "f64", "mint"]}

bytemuck = { version = "1.4", features = [ "derive" ] }

palette = "0.6"
colorous = "1.0"

# raving-wgpu = { path = "../../raving-wgpu" }
raving-wgpu = { git = "https://github.com/chfi/raving-wgpu" }
lyon = "1.0"

anyhow = "1.0"

pollster = "0.2"
rhai = { version = "1.10.1", features = ["sync", "f32_float"]}

roaring = "0.10"
pico-args = "0.5.0"
memchr = "2.5"
noodles = { version = "0.29", features = ["sam", "bam", "fasta", "bed"]}
btoi = "0.4.2"

