[package]
name = "waragraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waragraph-core = { path = "../lib" }
bimap = "0.6"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

crossbeam = "0.8"

winit = "0.28"
env_logger = "0.9"
log = "0.4"

egui = { version = "0.21", features = ["mint"] }
egui-wgpu = { version = "0.21" }
egui-winit = { version = "0.21" }

egui_file = "0.8"

wgpu = { version = "0.15", features = ["spirv"] }
# naga = { version = "0.10", features = ["clone", "spv-in", "glsl-in", "spv-out"] }

taffy = { version = "0.3", features = ["grid"] }

mint = "0.5"
ultraviolet = { version = "0.9", features = ["bytemuck", "f64", "mint"]}

rstar = "0.10"

bytemuck = { version = "1.4", features = ["derive"] }

palette = { version = "0.6", features = ["bytemuck"] }
colorous = "1.0"

# raving-wgpu = { path = "../../raving-wgpu" }
raving-wgpu = { git = "https://github.com/chfi/raving-wgpu" }
lyon = "1.0"
rand = "0.8"

anyhow = "1.0"

pollster = "0.2"
rhai = { version = "1.10.1", features = ["sync", "f32_float"]}

roaring = "0.10"
pico-args = "0.5.0"
memchr = "2.5"
noodles = { version = "0.29", features = ["sam", "bam", "fasta", "bed", "gff"]}
btoi = "0.4.2"

iset = "0.2"

reunion = "0.1"
sprs = "0.11"

three-edge-connected = "0.2"
sha2 = "0.10.6"
egui_dock = "0.5.0"
