[package]
name = "waragraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waragraph-core = { path = "../lib" }
bimap = "0.6"

async-trait = "0.1"

crossbeam = "0.8"

env_logger = "0.9"
log = "0.4"

wgpu = { version = "0.16", features = ["spirv", "expose-ids"] }
# naga = { version = "0.10", features = ["clone", "spv-in", "glsl-in", "spv-out"] }

taffy = { version = "0.3", features = ["grid"] }

mint = "0.5"
ultraviolet = { version = "0.9", features = ["bytemuck", "f64", "mint"]}

rstar = "0.10"

bytemuck = { version = "1.4", features = ["derive"] }

palette = { version = "0.6", features = ["bytemuck"] }
colorous = "1.0"

raving-wgpu = { path = "../../raving-wgpu" }
# raving-wgpu = { git = "https://github.com/chfi/raving-wgpu" }
lyon = "1.0"
rand = "0.8"

anyhow = "1.0"

pollster = "0.2"
rhai = { version = "1.10.1", features = ["sync", "f32_float"]}

roaring = "0.10"
pico-args = "0.5.0"
memchr = "2.5"
noodles = { version = "0.29", features = ["sam", "bam", "fasta", "bed", "gff"]}
btoi = "0.4.2"

iset = "0.2"

reunion = "0.1"
sprs = "0.11"

sha2 = "0.10.6"
kiddo = "2.0.2"
parry2d = "0.13.4"

# winit = "0.28"
egui = { version = "0.22", features = ["mint"] }
egui-wgpu = { version = "0.22" }
egui_tiles = "0.1"
egui_file = "0.9"
parking_lot = "0.12.1"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
lazy_async_promise = "0.5.0"
egui-winit = { version = "0.22" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
egui-winit = { version = "0.22", default-features = false }
