[package]
name = "waragraph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4"
# roaring = "0.10"
# btoi = "0.4.2"
# bytemuck = "1.4"
# bimap = "0.6"
log.workspace = true
roaring.workspace = true
btoi.workspace = true
bytemuck.workspace = true
bimap.workspace = true

reunion = "0.1"
sprs.workspace = true
# three-edge-connected = "0.2"

tar = "0.4"

# arrow.workspace = true
arrow2 = { workspace = true, features = [
"io_json",
"io_ipc",
# "io_ipc_compression",
"io_parquet",
# "io_parquet_compression",
"io_print",
"compute",
"arrow",
] }
ahash = "0.8.3"
instant = "0.1.12"
smallvec = "1.11.2"

# [target.'not(cfg(target_arch = "wasm32"))'.dependencies]
# arrow2 

# [target.'cfg(target_arch = "wasm32")'.dependencies]