[package]
name = "waragraph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
roaring = "0.10"
btoi = "0.4.2"
bytemuck = "1.4"
bimap = "0.6"

reunion = "0.1"
sprs = "0.11"
# three-edge-connected = "0.2"