[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5" }

waragraph-core.workspace = true
sprs.workspace = true

ultraviolet.workspace = true

arrow2 = { workspace = true, features = [
"io_json",
"io_ipc",
# "io_ipc_compression",
"io_parquet",
# "io_parquet_compression",
"io_print",
"compute",
"arrow",
] }

bytemuck = { workspace = true, features = ["derive", "extern_crate_alloc"] }


