[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]


wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
egui-winit = { version = "0.22", default-features = false }
egui_tiles = "0.1"

log = "0.4"

parking_lot = "0.12.1"

bytemuck = { version = "1.4", features = ["derive"] }

colorous = "1.0"
palette = { version = "0.6", features = ["bytemuck"] }

raving-wgpu = { path = "../../raving-wgpu" }
waragraph-core = { path = "../lib" }

anyhow = "1.0"
ultraviolet = { version = "0.9", features = ["bytemuck", "f64", "mint"]}

flume = "0.10"
crossbeam-utils = "0.8.16"
bimap = "0.6.3"
sha2 = "0.10.7"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

wgpu = { version = "0.16", features = ["webgl"] }