[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
waragraph-core.workspace = true

# raving-wgpu = { path = "../../raving-wgpu" }
raving-wgpu.workspace = true

wasm-bindgen = "0.2"

# wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "2e9ff5dfa3f11415f0efe9b946ee2734500e9ee3" }
# wasm-bindgen-shared = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "2e9ff5dfa3f11415f0efe9b946ee2734500e9ee3" }

wasm-bindgen-futures = "0.4"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
"Blob",
"CanvasRenderingContext2d",
"HtmlCanvasElement",
"ImageBitmap",
"ImageData",
"OffscreenCanvas",
"OffscreenCanvasRenderingContext2d",
"Path2d",
"Response",
"Window",
]}

log.workspace = true

parking_lot.workspace = true

bytemuck = { workspace = true, features = ["derive"] }

colorous = "1.0"
palette = { version = "0.6", features = ["bytemuck"] }

anyhow.workspace = true

mint.workspace = true
ultraviolet.workspace = true

flume = "0.10"
crossbeam-utils = "0.8.16"
bimap.workspace = true
sha2 = "0.10.7"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

roaring = "0.10"

wgpu = { version = "0.16", features = ["webgl"] }
console_error_panic_hook = "0.1.7"

async-trait = "0.1"

arrow2 = { workspace = true, features = [
"io_json",
"io_ipc",
"io_parquet",
"io_print",
"compute",
"arrow",
] }
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
futures-intrusive = "0.5.0"

